# python-project-50

./: .gitignore  Makefile  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
gendiff/formatters/: json.py  stylish.py
gendiff/scripts/: ast.py  diff.py  files.py  format_value.py  gendiff.py  generate_diff.py  parse.py
gendiff/scripts/formatters/: plain.py  stylish.py
tests/: test_gendiff.py
